<resources>
    <string name="app_name">微账单</string>
    <string name="new_record">请在这里记账</string>
    <string name="records">请在这看记录</string>
    <string name="action_about">关于</string>
    <string name="income">收入</string>
    <string name="pay">支出</string>
    <string name="all">所有</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="everywhere">随时记录财产</string>
    <string name="type">类型</string>
    <string name="account">账号</string>
    <string name="amount">金额</string>
    <string name="remark">备注</string>
    <string name="time">时间</string>
    <string name="clickcopy">(点击复制帐号)</string>
    <string name="wechat">微信</string>
    <string name="qq">QQ</string>
    <string name="wechat_no">Muscledontgrowinaday</string>
    <string name="qq_no">7840041</string>
    <string name="myname">@张 宇</string>
    <string name="author">作者</string>
    <string name="about">关于</string>
    <string name="about_me">关于作者</string>
    <string name="about_app">关于应用</string>
    <string name="intro_app">一个简洁优雅的记账应用</string>
    <string name="version_string">应用版本</string>
    <string name="version">2.1</string>
    <string name="incomesource">收入去向</string>
    <string name="incomeaccount">收入账号</string>
    <string name="incomeamount">收入金额</string>
    <string name="incometype">收入来源</string>
    <string name="paysource">支出来源</string>
    <string name="payaccount">支出账号</string>
    <string name="payamount">支出金额</string>
    <string name="paytype">支出去向</string>
    <string name="shortcut">速记</string>
    <string name="back">返回</string>
    <string name="thisisallrecords">这是一切记录</string>
    <string name="btn_records">开心记一笔账吧</string>
    <string name="settings">设置</string>
    <string name="share" >分享</string>
    <string name="sound_record">语音记账</string>
    <string name="new_account">管理账户</string>
    <string name="new_incomesource" >管理收入来源</string>
    <string name="new_paytype" >管理支出去向</string>
</resources>
