<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/about"
        android:textColor="#000000"
        android:textSize="30sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/about_me"
        android:textColor="#000000"
        android:textSize="19sp">

    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
       >
        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/author"
            android:textSize="15sp"

            ></TextView>

        <TextView
            android:layout_width="155dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:text="@string/myname"
            android:textColor="#000000"
            android:textSize="15sp"

            ></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/wechat"
            android:textSize="15sp"
            ></TextView>

        <TextView
            android:id="@+id/text_wechat_account"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:text="@string/wechat_no"
            android:textColor="#000000"
            android:textSize="15sp"></TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/qq"
            android:textSize="15sp"
            ></TextView>

        <TextView
            android:id="@+id/text_qq_account"
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:text="@string/qq_no"
            android:textColor="#000000"
            android:textSize="15sp"></TextView>
    </LinearLayout>
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickcopy"
        android:textSize="10sp"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/about_app"
        android:textColor="#000000"
        android:textSize="19sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_app"
        android:layout_gravity="center">

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/version_string"
        android:textColor="#000000"
        android:textSize="19sp">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:layout_gravity="center">

    </TextView>
</LinearLayout>