<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#FAF9F6">  <!-- 背景改为米白色 -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textColor="#000000"
            android:textSize="30sp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incometype"
            android:textColor="#000000"
            android:textSize="20sp"
            android:gravity="center" />

        <Spinner
            android:id="@+id/new_income_source"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:entries="@array/income_from"
            android:textColor="#000000"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incomesource"
            android:textColor="#000000"
            android:textSize="20sp"
            android:gravity="center" />

        <Spinner
            android:id="@+id/new_income_type"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:entries="@array/income_to"
            android:textColor="#000000"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incomeaccount"
            android:textColor="#000000"
            android:textSize="20sp"
            android:gravity="center" />

        <EditText
            android:id="@+id/new_income_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="77sp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incomeamount"
            android:textColor="#000000"
            android:textSize="20sp"
            android:gravity="center" />

        <EditText
            android:id="@+id/new_income_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="77sp"
            android:maxLength="9"
            android:gravity="center"
            android:singleLine="true" />  <!-- 输入内容不可换行 -->

        <Button
            android:background="@drawable/button_gradient_background"
            android:id="@+id/button_new_income_record"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:text="@string/btn_records"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center" />
        <Button
            android:background="@drawable/button_gradient_background"
            android:id="@+id/button_new_income_back"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginTop="7dp"
            android:text="@string/back"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:gravity="center" />
    </LinearLayout>
</ScrollView>