<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/new_record"
        android:textSize="60sp"
        android:textColor="#000000">

    </TextView>

    <Button
        android:background="@drawable/btn_circle"
        android:id="@+id/button_income"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/income"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal"

        >

    </Button>

    <Button
        android:background="@drawable/btn_circle_01"
        android:id="@+id/button_pay"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:text="@string/pay"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal">

    </Button>

</LinearLayout>