<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FAF9F6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="257dp"
            android:layout_marginTop="77dp"
            android:layout_gravity="center"
            android:text="@string/everywhere"
            android:textColor="#000000"
            android:textSize="77sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <Button
            android:id="@+id/button_new_record"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_gravity="center"
            android:text="@string/new_record"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_gradient_background"
            style="@style/Widget.AppCompat.Button" />

        <Button
            android:id="@+id/button_records"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/records"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_gradient_background"
            style="@style/Widget.AppCompat.Button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textSize="77sp" />

            <TextView
                android:id="@+id/text_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="0.00"
                android:textColor="#000000"
                android:textSize="77sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:textSize="77sp" />

            <TextView
                android:id="@+id/text_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="0.00"
                android:textColor="#000000"
                android:textSize="77sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="结余"
                android:textSize="77sp" />

            <TextView
                android:id="@+id/text_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="0.00"
                android:textColor="#000000"
                android:textSize="77sp"
                android:textStyle="bold" />
        </LinearLayout>
        <Button
            android:id="@+id/button_home_settings"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_gradient_background"
            style="@style/Widget.AppCompat.Button" />

        <Button
            android:id="@+id/button_share"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_gravity="center"
            android:layout_marginTop="77dp"
            android:text="@string/share"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:background="@drawable/button_gradient_background"
            style="@style/Widget.AppCompat.Button" />
        <Button
            android:id="@+id/textview_about_me"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_marginTop="77dp"
            android:layout_gravity="center"
            android:text="@string/about_app"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:background="@drawable/button_gradient_background" />
    </LinearLayout>
</ScrollView>